# workflows-microservices

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml
main/: Dockerfile  go.mod  go.sum  main.go  query.sql  schema.sql  sqlc.yaml  users.db
main/commons/: commons.go  schema.sql
main/db/: models.go  query.sql.go
main/handlers/: handlers.go
main/models/: models.go
main/templates/: 404.templ  404_templ.go  home.templ  home_templ.go  orderBanner.templ  orderBanner_templ.go  orderform.templ  orderform_templ.go  signin.templ  signin_templ.go  signup.templ  signup_templ.go  signupbanner.templ  signupbanner_templ.go  unauthorized.templ  unauthorized_templ.go
orders/: Dockerfile  pyproject.toml  query.sql  schema.sql  sqlc.yaml
orders/src/orders/db/: __init__.py  models.py  query.py
orders/src/orders/workflow/: events.py  main.py  resources.py
payments/: Dockerfile  pyproject.toml  query.sql  schema.sql  sqlc.yaml
payments/src/payments/db/: __init__.py  models.py  query.py
payments/src/payments/workflow/: events.py  main.py  resources.py
stock/: Dockerfile  pyproject.toml  query.sql  schema.sql  sqlc.yaml
stock/src/stock/db/: __init__.py  models.py  query.py
stock/src/stock/workflow/: events.py  main.py  resources.py
